codec-struct增加一些运行期异常检测