@@ -38,10 +38,13 @@ public class CollectionCodec2 extends Codec {
             }
         } else {
             try {
-                result = (Collection) type.newInstance();
+                result = (Collection) type.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 result = new ArrayList<>();
             }
+        }
+        if (result == null) {
+            result = new ArrayList<>();
         }
         if (size == 0) {
             return result;
@@ -77,13 +80,13 @@ public class CollectionCodec2 extends Codec {
         }
         Collection<Object> collection = (Collection) value;
         int size = collection.size();
-        ByteBuffUtil.writeShort(out, (short) size);
         if (size == 0) {
             return;
         }
         if (size > Short.MAX_VALUE) {
             throw new RuntimeException("Collection size less than zero or exceed max short value!");
         }
+        ByteBuffUtil.writeShort(out, (short) size);
         byte status = 0;
         LiteMessageFactory messageFactory = StructCodecEnvironment.messageFactory;
         // 基本类型，写入状态码：0
@@ -91,6 +94,9 @@ public class CollectionCodec2 extends Codec {
         if (!TypeUtil.isPrimitiveOrString(wrapper)) {
             Set<Class<?>> elemType = new HashSet<>();
             for (Object elem : collection) {
+                if (elem == null) {
+                    throw new IllegalStateException("Collection element is null");
+                }
                 Class<?> clazz = elem.getClass();
                 elemType.add(clazz);
             }
@@ -108,6 +114,9 @@ public class CollectionCodec2 extends Codec {
         ByteBuffUtil.writeByte(out, status);
 
         for (Object elem : collection) {
+            if (elem == null) {
+                throw new IllegalStateException("Collection element is null");
+            }
             Class<?> eleType = wrapper;
             if (status == 1) {
                 eleType = elem.getClass();
